# velocyto.py

./: .buildinfo  .flake8  .gitignore  .sourcery.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build.py  changelog.html  genindex.html  index.html  mypy.ini  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  test.py
_modules/: index.html
_modules/velocyto/: analysis.html  counter.html  diffusion.html  estimation.html  feature.html  gene_info.html  indexes.html  logic.html  molitem.html  neighbors.html  read.html  segment_match.html  serialization.html  transcript_model.html
_sources/: changelog.rst.txt
_sources/fullapi/: api_cli_internals.rst.txt  api_cli_logic.rst.txt
_sources/license/: index.rst.txt
_sources/tutorial/: analysis.rst.txt  index.rst.txt
_static/: documentation_options.js
citing/: index.html
doc/: Makefile  changelog.rst  conf.py  index.rst
doc/_build/doctrees/: API.doctree  environment.pickle  index.doctree  installation.doctree  intro.doctree  tutorial.doctree
doc/_build/doctrees/API/: index.doctree
doc/_build/doctrees/citing/: index.doctree
doc/_build/doctrees/examples/: index.doctree
doc/_build/doctrees/fullapi/: api_analysis.doctree  api_cli_internals.doctree  api_diffusion.doctree  api_estimation.doctree  api_neighbors.doctree  cliapi.doctree  index.doctree  velocyto.doctree
doc/_build/doctrees/install/: index.doctree
doc/_build/doctrees/license/: index.doctree
doc/_build/doctrees/notebooks/: index.doctree
doc/_build/doctrees/tutorial/: analysis.doctree  cli.doctree  index.doctree
doc/_build/html/: genindex.html  objects.inv  searchindex.js
doc/_build/html/_modules/velocyto/: counter.html  estimation.html
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_sources/fullapi/: api_cli_internals.rst.txt  api_estimation.rst.txt  api_neighbors.rst.txt  cliapi.rst.txt  index.rst.txt
doc/_build/html/_sources/license/: index.rst.txt
doc/_build/html/_static/: scrolls.css
doc/_build/html/fullapi/: api_analysis.html  api_diffusion.html  api_neighbors.html  cliapi.html
doc/_build/html/tutorial/: analysis.html  index.html
doc/_build/html/tutorial/_modules/: index.html
doc/_build/html/tutorial/_modules/velocyto/: analysis.html  diffusion.html  genes.html  metadata.html  molitem.html  neighbors.html  transcript.html
doc/_build/html/tutorial/fullapi/: api_estimation.html
doc/_ext/: edit_on_github.py
doc/citing/: index.rst
doc/fullapi/: api_analysis.rst  api_cli_internals.rst  api_cli_logic.rst  api_serialization.rst  cliapi.rst  index.rst
doc/install/: index.rst
doc/notebooks/: index.rst
doc/substitutions/: README.md  dropest_bc_correct.txt  multi10x.txt  run.txt  run10x.txt  run_dropest.txt  run_smartseq2.txt  velocyto.txt
doc/tutorial/: analysis.rst  cli.rst
docker/: Dockerfile
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/velocyto/: analysis.html  counter.html  diffusion.html  estimation.html  genes.html  intervals.html  molitem.html  neighbors.html  read.html  serialization.html  transcript.html
docs/_sources/: index.rst.txt
docs/_sources/fullapi/: api_analysis.rst.txt  api_diffusion.rst.txt  index.rst.txt
docs/_sources/install/: index.rst.txt
docs/_sources/notebooks/: index.rst.txt
docs/_sources/tutorial/: analysis.rst.txt  cli.rst.txt  index.rst.txt
docs/citing/: index.html
docs/fullapi/: api_analysis.html  api_cli_internals.html  api_diffusion.html  api_estimation.html  api_neighbors.html  api_serialization.html  cliapi.html  index.html
docs/install/: index.html
docs/license/: index.html
docs/notebooks/: index.html
docs/tutorial/: analysis.html  cli.html  index.html
fullapi/: api_analysis.html  api_cli_internals.html  api_cli_logic.html  api_diffusion.html  api_estimation.html  api_neighbors.html  api_serialization.html  cliapi.html  index.html
install/: index.html
license/: index.html
notebooks/: index.html
src/velocyto/: __init__.py  analysis.py  constants.py  counter.py  diffusion.py  estimation.py  feature.py  gene_info.py  indexes.py  logic.py  metadata.py  molitem.py  neighbors.py  r_interface.py  read.py  segment_match.py  serialization.py  speedboosted.c  speedboosted.pyx  transcript_model.py  utils.py
src/velocyto/commands/: __init__.py  _run.py  cli.py  common.py  dropest_bc_correct.py  run.py  run10x.py  run_dropest.py  run_smartseq2.py  velocyto.py
tutorial/: analysis.html  cli.html  index.html
velocyto/: __init__.py  _version.py  analysis.py  constants.py  counter.py  diffusion.py  estimation.py  feature.py  gene_info.py  genes.py  indexes.py  intervals.py  logic.py  metadata.py  molitem.py  neg_ctrl_counter.py  neighbors.py  prot_acc.py  protaccel.py  r_interface.py  read.py  sample_template.csv  segment_match.py  serialization.py  speedboosted.c  speedboosted.pyx  transcript.py  transcript_model.py  utils.py
velocyto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
velocyto/commands/: _controlrun.py  _run.py  cellsort.py  controlrun.py  dropest_bc_correct.py  extract_intervals.py  extract_repeats.py  multi10x.py  run.py  run10x.py  run_dropest.py  run_smartseq2.py  velocyto.py
