[tool.poetry]
name = "velocyto"
version = "0.28.0"
description = "RNA velocity analysis for single cell RNA-seq data"
authors = ["Linnarsson Lab <sten.linnarsson@ki.se>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/velocyto-team/velocyto.py"
repository = "https://github.com/velocyto-team/velocyto.py"
documentation = "http://velocyto.org/velocyto.py/index.html"
keywords = ["RNAseq", "singlecell", "bioinformatics", "transcriptomics"]
include = [
    # C extensions must be included in the wheel distributions
    { path = "src/velocyto/*.so", format = "wheel" },
    { path = "src/velocyto/*.csv", format = "wheel" },
    { path = "src/velocyto/*.pyx", format = "wheel" },
    { path = "src/velocyto/*.c", format = "wheel" },
    { path = "barcodes/*.gz", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numba = "^0.56.3"
numpy = "^1.23.4"
scipy = "^1.9.3"
cython = "^0.29.32"
matplotlib = "^3.6.2"
h5py = "^3.7.0"
loompy = "^3.0.7"
pysam = "^0.20.0"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
rpy2 = "^3.5.5"
typer = "^0.6.1"
loguru = "^0.6.0"
rich = "^12.6.0"
tqdm = "^4.64.1"

[tool.poetry.extras]
R = ["rpy2"]

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.961"
flake8 = "^4.0.1"
ipython = "^8.4.0"
nox = "^2022.1.7"
nox-poetry = "^1.0.1"

[tool.poetry.group.dev.dependencies]
memray = "^1.4.0"
memory-profiler = "^0.60.0"
ruff = "^0.0.252"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy", "toml", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
velocyto = "velocyto.commands.cli:velocyto"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.black]
line-length = 120
target-version = ['py39']
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
select = ["B", "C", "E", "F", "T", "W", "Q"]
# E127, E128 are hard to silence in certain nested formatting situations.
# E265, E266 talk about comment formatting which is too opinionated.
# E402 warns on imports coming after statements. There are important use cases
# like demandimport (https://fburl.com/demandimport) that require statements
# before imports.
# E501 is not flexible enough, we're using B950 instead.
# E722 is a duplicate of B001.
# P207 is a duplicate of B003.
# W503 talks about operator formatting which is too opinionated.
# E203 conflicts with Black
# ignore = ["E127", "E128", "E265", "E266", "E402", "E501", "E722", "P207", "W503", "E203", "T484"]
ignore = ["E501", "B008", "B905"]
line-length = 80
exclude = [
  ".git",
  ".hg",
  "__pycache__",
  "_bin/*",
  "_build/*",
  "_ig_fbcode_wheel/*",
  "buck-out/*",
  "third-party-buck/*",
  "third-party2/*",
  "dist",
  ".venv",
  ".nox",
  ".mypy_cache",
  ".pytype",
  ".svn",
  "__pypackages__"
]

[tool.ruff.mccabe]
max-complexity = 50
