[tool.poetry]
name = "velocyto"
version = "0.29.0"
description = "RNA velocity analysis for single cell RNA-seq data"
authors = ["Linnarsson Lab <sten.linnarsson@ki.se>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/velocyto-team/velocyto.py"
repository = "https://github.com/velocyto-team/velocyto.py"
documentation = "http://velocyto.org/velocyto.py/index.html"
keywords = ["RNAseq", "singlecell", "bioinformatics", "transcriptomics"]
include = [
    # C extensions must be included in the wheel distributions
    { path = "src/velocyto/*.so", format = "wheel" },
    { path = "src/velocyto/*.csv", format = "wheel" },
    { path = "src/velocyto/*.pyx", format = "wheel" },
    { path = "src/velocyto/*.c", format = "wheel" },
    { path = "barcodes/*.gz", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numba = "^0.57.1"
numpy = ">=1.21,<1.25"
scipy = "^1.11.1"
cython = "^3.0.0"
matplotlib = "^3.7.2"
h5py = "^3.9.0"
loompy = "^3.0.7"
pysam = "^0.21.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
rpy2 = "^3.5.13"
typer = "^0.9.0"
loguru = "^0.7.0"
rich = "^13.5.2"
tqdm = "^4.65.0"

[tool.poetry.extras]
R = ["rpy2"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
ipython = "^8.14.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
memray = "^1.9.1"
memory-profiler = "^0.61.0"
ruff = "^0.0.282"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy", "toml", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
velocyto = "velocyto.commands.cli:velocyto"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
select = ["B", "C", "E", "F", "T", "W", "Q"]
# E127, E128 are hard to silence in certain nested formatting situations.
# E265, E266 talk about comment formatting which is too opinionated.
# E402 warns on imports coming after statements. There are important use cases
# like demandimport (https://fburl.com/demandimport) that require statements
# before imports.
# E501 is not flexible enough, we're using B950 instead.
# E722 is a duplicate of B001.
# P207 is a duplicate of B003.
# W503 talks about operator formatting which is too opinionated.
# E203 conflicts with Black
# ignore = ["E127", "E128", "E265", "E266", "E402", "E501", "E722", "P207", "W503", "E203", "T484"]
ignore = ["E501", "B008", "B905"]
line-length = 80
exclude = [
  ".git",
  ".hg",
  "__pycache__",
  "_bin/*",
  "_build/*",
  "_ig_fbcode_wheel/*",
  "buck-out/*",
  "third-party-buck/*",
  "third-party2/*",
  "dist",
  ".venv",
  ".nox",
  ".mypy_cache",
  ".pytype",
  ".svn",
  "__pypackages__"
]

[tool.ruff.mccabe]
max-complexity = 50
